# env_monitoring

./: .gitignore  CLAUDE.md  PAS_CO2_PM_r0.ino  README.md  iot_env_project.md
backend/ingest_mqtt/: Dockerfile  pyproject.toml
backend/ingest_mqtt/src/ingest_mqtt/: __init__.py  db.py  main.py  mqtt.py
backend/ingest_purpleair/: Dockerfile  pyproject.toml
backend/ingest_purpleair/src/ingest_purpleair/: api.py  db.py  main.py
docs/: architecture.md  db_schema.md  deployment_raspberry_pi.md  deployment_windows.md  docker_setup_pi.md  docker_setup_windows.md  security.md  sensors.md  sgp40_upgrade.md
firmware/nano-esp32-iaq/: nano-esp32-iaq.ino  secrets.example.h
infra/: .env.example  docker-compose.yml  rotate_credentials.sh
infra/grafana/dashboards/: data_quality.json  general_overview.json  iaq_overview.json  pm_deep_dive.json  purpleair_outdoor.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasource.yml
infra/mosquitto/: acl  mosquitto.conf
infra/postgres/: migrate.sh
infra/postgres/init/: 001_schema.sql  002_add_co2_diagnostics.sql  003_add_voc.sql  004_add_purpleair.sql  005_purpleair_drop_unavailable_cols.sql
infra/postgres/migrations/: 001_roles_and_schema.sql  002_tables.sql
