[project]
name = "ingest-mqtt"
version = "0.1.0"
description = "MQTT to PostgreSQL ingestion service for IAQ sensor data"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0.0",
    "psycopg[binary,pool]>=3.1.0",
]

[project.scripts]
ingest-mqtt = "ingest_mqtt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest_mqtt"]
