[project]
name = "ingest-purpleair"
version = "0.1.0"
description = "PurpleAir API to PostgreSQL ingestion service for outdoor air quality data"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "psycopg[binary,pool]>=3.1.0",
]

[project.scripts]
ingest-purpleair = "ingest_purpleair.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest_purpleair"]
